# spark-solr-indexer

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  manage.py  pyproject.toml  smoke_test.sh  tasks.py
data_gen/: generate_data.py
notebooks/: pipeline_gcp.ipynb  pipeline_local.ipynb
notebooks/.ipynb_checkpoints/: pipeline-checkpoint.ipynb  pipeline_gcp-checkpoint.ipynb  pipeline_local-checkpoint.ipynb
scripts/: cache_dependencies.sh  check_data_exists.sh  check_indexing_complete.py  check_solr_running.sh  ivysettings.xml  setup_solr.sh  verify_indexing.py  verify_solr.sh
spark_job/: index_to_solr.py  index_to_solr_gcp.py
