[project]
name = "spark-solr-indexer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=38.2.0",
    "google-cloud-storage>=3.6.0",
    "notebook>=7.5.0",
    "pyspark<4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
